<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="12dip"
    android:weightSum="1" >
   
  
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_app_mode" />
  
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startMobileConnectionMeasurements"
        android:text="@string/button_start_measurement" />
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startSensorData"
        android:text="@string/button_StartSensorData" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startPureWebSocket"
        android:text="@string/button_StartPureWebSocket" />
</LinearLayout>